minor: glow effect at the bottom / glow z-index fix

--- a/src/components/navigation/Navigation.module.scss
+++ b/src/components/navigation/Navigation.module.scss
@@ -41,3 +41,9 @@ header {
 @media (max-width: 800px) {
     .buttons { display: none }
 }
+
+@media (max-width: 384px) {
+    header {
+        font-size: .8em;
+    }
+}
