--- a/src/pages/homepage/Homepage.module.scss
+++ b/src/pages/homepage/Homepage.module.scss
@@ -53,6 +53,7 @@
     top: -24em; right: -44em;
     position: absolute;
     rotate: 80deg;
+    z-index: -1;
 }
 
 .glare2 {
